# self-reposcope

./: Cargo.toml  LICENSE  languages_colors.json  readme.md
.github/workflows/: release.yml  reposcope.yml  test.yml
src/: animation.css  draw_svg.rs  fetch_gh_api.rs  get_language_color.rs  main.rs  style.css
src/assets/: languages.yml  style.css
