[package]
name = "self-reposcope"
version = "0.1.0"
edition = "2024"
authors = ["mizuki aoki <xx.giriikeru@gmail.com>"]
description = "A language usage visualizer for your GitHub repositories (including private ones)"
license = "MIT"
repository = "https://github.com/4okimi7uki/self-reposcope"
homepage = "https://github.com/4okimi7uki/self-reposcope"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["github", "stats", "svg", "language", "analyzer", "private"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive", "env"] }